[workspace]
members = ["ruchei-ffi-registry", "ruchei-ffi-tracing"]

[workspace.package]
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/parrrate/ruchei-ffi"
authors = ["Alisa Feistel <alisafeistel@gmail.com>"]
rust-version = "1.89"

[package]
name = "ruchei-ffi"
version = "0.0.0-a.0"
description = "FFI bindings for streams"
documentation = "https://docs.rs/ruchei-ffi"
keywords = ["streams", "async", "stream"]
categories = ["asynchronous"]
readme = "README.md"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[workspace.dependencies]
ruchei-ffi-registry = { path = "ruchei-ffi-registry" }
ruchei-ffi-tracing = { path = "ruchei-ffi-tracing" }

abi_stable = { git = "https://github.com/parrrate/abi_stable", default-features = false }
async-ffi = { version = "0.5.0", features = ["abi_stable"] }
bumpalo = { version = "3.16.0", features = ["collections"] }
dashmap = "6.1.0"
futures-core = "0.3.31"
futures-sink = "0.3.31"
libloading = "0.8.6"
ruchei-route = "0.1.7"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-subscriber = "0.3.19"
tracking-allocator = "0.4.0"

[patch.crates-io]
abi_stable = { git = "https://github.com/parrrate/abi_stable", default-features = false }
abi_stable_derive = { git = "https://github.com/parrrate/abi_stable", default-features = false }
abi_stable_shared = { git = "https://github.com/parrrate/abi_stable", default-features = false }

[dependencies]
abi_stable.workspace = true
async-ffi.workspace = true
futures-core.workspace = true
futures-sink.workspace = true
ruchei-route.workspace = true
