[package]
name = "ruchei-ffi-context"
version = "0.0.0-a.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
abi_stable.workspace = true

[dev-dependencies]
async-ffi = "0.5.0"
tokio.workspace = true
